--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.yahiaabdelwahab.ama">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,53 +13,46 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/home">
-            <intent-filter>
+            android:label="@string/home"
+            android:launchMode="singleInstance">
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SearchActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/search" />
-
+            android:label="@string/search"
+            android:launchMode="singleInstance" />
         <activity
             android:name=".ProfileActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/profile" />
-
+            android:label="@string/profile"
+            android:launchMode="singleInstance" />
         <activity
             android:name=".SettingsActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/settings" />
-
+            android:label="@string/settings"
+            android:launchMode="singleInstance" />
         <activity
             android:name=".SignInActivity"
-            android:launchMode="singleInstance"
             android:label="@string/sign_in"
-            android:parentActivityName=".MainActivity">
-
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-
-        </activity>
-
-        <activity android:name=".RegisterActivity"
             android:launchMode="singleInstance"
-            android:label="@string/register"
             android:parentActivityName=".MainActivity">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
-
         </activity>
-
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/register"
+            android:launchMode="singleInstance"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".SignedInActivity"
+            android:label="Signed In"/>
     </application>
 
 </manifest>
