Divide the Registering process to two Activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".RegisterOneActivity"
             android:label="@string/register"
             android:launchMode="singleInstance"
             android:parentActivityName=".MainActivity">
@@ -51,8 +51,20 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".SignedInActivity"
-            android:label="Signed In"/>
+
+
+        <activity android:name=".RegisterTwoActivity"
+            android:label="@string/register"
+            android:launchMode="singleInstance"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".SignedInActivity"
+            android:label="Signed In" />
     </application>
 
 </manifest>
