Implement the first iteration for Search and make User data class parcelable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,22 +45,12 @@
         <activity
             android:name=".RegisterOneActivity"
             android:label="@string/register"
-            android:launchMode="singleInstance"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:launchMode="singleInstance" />
 
 
         <activity android:name=".RegisterTwoActivity"
             android:label="@string/register"
-            android:launchMode="singleInstance"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
+            android:launchMode="singleInstance" />
 
         <activity
             android:name=".SignedInActivity"
