--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
     buildToolsVersion '28.0.2'
     productFlavors {
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -34,7 +38,8 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
     //28.0.0-rc01
     implementation 'com.android.support:design:28.0.0-alpha1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     //Firebase
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
